--- a/Neighborly/Views/Listings/Details.cshtml
+++ b/Neighborly/Views/Listings/Details.cshtml
@@ -24,7 +24,7 @@
                             <div class="flex flex-col space-y-1.5 p-6 pb-2">
                                 <div class="flex justify-between items-start">
                                     <div>
-                                        <div class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent @(Model.Listing.Type == "offer" ? "text-primary-foreground hover:bg-primary/80 bg-neighborly-500" : "text-secondary-foreground hover:bg-secondary/80 bg-blue-500")">
+                                        <div class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent @(Model.Listing.Type == "offer" ? "text-primary-foreground bg-neighborly-500" : "text-primary-foreground bg-blue-500")">
                                             @(Model.Listing.Type == "offer" ? "Oferuję pomoc" : "Szukam pomocy")
                                         </div>
                                         <h1 class="text-2xl font-bold text-gray-900">@Model.Listing.Title</h1>
