--- a/Neighborly/Views/Listings/Index.cshtml
+++ b/Neighborly/Views/Listings/Index.cshtml
@@ -169,7 +169,7 @@
                                     </div>
                                 }
                                 <div class="absolute top-2 right-2">
-                                    <div class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent @(listing.Type == "offer" ? "text-primary-foreground hover:bg-primary/80 bg-neighborly-500" : "text-secondary-foreground hover:bg-secondary/80 bg-blue-500")">
+                                    <div class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent @(listing.Type == "offer" ? "text-primary-foreground bg-neighborly-500" : "text-primary-foreground bg-blue-500")">
                                         @(listing.Type == "offer" ? "Oferuję pomoc" : "Szukam pomocy")
                                     </div>
                                 </div>
