--- a/Neighborly/wwwroot/css/output.css
+++ b/Neighborly/wwwroot/css/output.css
@@ -896,6 +896,10 @@ body {
   height: 5rem;
 }
 
+.h-24 {
+  height: 6rem;
+}
+
 .h-3 {
   height: 0.75rem;
 }
@@ -932,6 +936,10 @@ body {
   height: 100%;
 }
 
+.min-h-\[120px\] {
+  min-height: 120px;
+}
+
 .min-h-\[80px\] {
   min-height: 80px;
 }
@@ -954,6 +962,10 @@ body {
 
 .w-20 {
   width: 5rem;
+}
+
+.w-24 {
+  width: 6rem;
 }
 
 .w-3 {
@@ -2110,6 +2122,14 @@ body {
 
 .disabled\:opacity-50:disabled {
   opacity: 0.5;
+}
+
+.peer:disabled ~ .peer-disabled\:cursor-not-allowed {
+  cursor: not-allowed;
+}
+
+.peer:disabled ~ .peer-disabled\:opacity-70 {
+  opacity: 0.7;
 }
 
 .aria-selected\:bg-background[aria-selected="true"] {
