--- a/Neighborly/Views/Shared/_Layout.cshtml
+++ b/Neighborly/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                         <div class="flex items-center gap-4">
                             <!-- Log out -->
                             <a href="~/Account/Logout">
-                                <button class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 text-neighborly-600 bg-transparent">
+                                <button class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2">
                                     Wyloguj sie
                                 </button>
                             </a>
